Fix dynamic divs not being properly shown on dark mode

--- a/styles.css
+++ b/styles.css
@@ -18,17 +18,6 @@ body#dark {
     background-color: black;
 }
 
-/* warning; janky as hell */
-body#dark div.a {
-    color: rgb(0, 0, 0);
-    filter: invert(1);
-}
-
-body#dark div.a emoji {
-    filter: invert(1);
-}
-/* warning end */
-
 body#dark nav {
     filter: invert(1);
 }
@@ -99,13 +88,24 @@ div.dynamic {
     border-image-source: url('/assets/div.png');
     border-image-slice: 20;
     border-image-repeat: repeat;
-    resize: both;
     overflow: auto;
     box-sizing: border-box;
     image-rendering: pixelated;
 }
 
+/* warning; janky as hell */
+body#dark div.dynamic {
+    color: rgb(0, 0, 0);
+    filter: invert(1);
+}
+
+body#dark div.dynamic emoji {
+    filter: invert(1);
+}
+/* warning end */
+
 #me {
     width: fit-content;
-    padding: 10px;
+    padding: 8px 120px;
+    margin-top: 8px;
 }
